Add controller, routes, layout, ui components, actions edit, delete...

--- a/dev/tests/integration/testsuite/Magento/Framework/View/_files/static/theme/web/css/styles.css
+++ b/dev/tests/integration/testsuite/Magento/Framework/View/_files/static/theme/web/css/styles.css
@@ -1178,7 +1178,7 @@ fieldset[disabled] .pager .action-next {
     Dashboard
 -------------------------------------- */
 /*
-    Dashboard Layout
+    Dashboard layout
 -------------------------------------- */
 .adminhtml-dashboard-index .col-1-layout {
   max-width: 1300px;
