--- a/lib/web/css/docs/source/_layout.less
+++ b/lib/web/css/docs/source/_layout.less
@@ -3,7 +3,7 @@
 //  * See COPYING.txt for license details.
 //  */
 
-//  # Layout
+//  # layout
 //
 //  Magento UI library provides mixins for flexible page layout customization. For simple quick layout customization global layout variables are used.
 
@@ -23,7 +23,7 @@ footer.footer {
     background-color: rgba(0, 0, 0, .2);
 }
 
-//  # Layout global variables
+//  # layout global variables
 //
 //  <pre>
 //    <table>
@@ -262,7 +262,7 @@ footer.footer {
     }
 }
 
-// # Layout column
+// # layout column
 //
 //  The <code>.layout-column()</code> mixin is used to setup page columns. It configures number, position and width of columns
 //
@@ -331,7 +331,7 @@ footer.footer {
     }
 }
 
-//  # Layout column variables
+//  # layout column variables
 //
 //  <pre>
 //    <table>
@@ -359,11 +359,11 @@ footer.footer {
 //  </pre>
 
 
-//  # Layout width
+//  # layout width
 //
 //  The <code>.lib-layout-width()</code> mixin is used to set default page width of the element the mixin is applied to. It can be used to set width for the whole page wrapper or for the page elements individualy like header, footer, and so on.
 
-//  # Layout width variables
+//  # layout width variables
 //
 //  <pre>
 //    <table>
